[gd_scene load_steps=2 format=3 uid="uid://b3v8k7nan2wq1"]

[ext_resource type="Script" path="res://social.gd" id="1_social"]

[node name="Social" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_social")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(60, 44)
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Friends"
vertical_alignment = 1

[node name="RefreshButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 44)
layout_mode = 2
text = "Refresh"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddFriendSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddFriendLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AddFriendSection"]
layout_mode = 2
text = "Add Friend by Code"
theme_type_variation = &"HeaderMedium"

[node name="InputContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AddFriendSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FriendCodeInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/AddFriendSection/InputContainer"]
custom_minimum_size = Vector2(200, 44)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter 8-character friend code"
max_length = 8

[node name="AddButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/AddFriendSection/InputContainer"]
custom_minimum_size = Vector2(100, 44)
layout_mode = 2
text = "Add Friend"

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AddFriendSection"]
layout_mode = 2
text = ""

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Friends" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="FriendsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Friends"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Pending" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="PendingList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Pending"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10